--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta property="og:type" content="website">
 
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;900&display=swap');
+
         * {
             margin: 0;
             padding: 0;
@@ -24,11 +26,13 @@
             --dark-stone: #262220;
             --roman-gold: #D4AF37;
             --imperial-purple: #6B46C1;
+            --laurel-green: #4CAF50;
             --parchment: #F5F2EC;
+            --crimson-red: #DC143C;
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'SF Pro Text', 'Helvetica Neue', Helvetica, Arial, sans-serif;
             background: var(--marble-black);
             color: var(--parchment);
             line-height: 1.6;
@@ -76,9 +80,22 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 4rem;
             box-shadow: 0 20px 60px rgba(212, 175, 55, 0.3);
             animation: pulse 3s ease-in-out infinite;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .logo img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            padding: 10px;
+        }
+
+        .logo-placeholder {
+            font-size: 3rem;
+            color: var(--marble-black);
         }
 
         @keyframes pulse {
@@ -87,14 +104,13 @@
         }
 
         h1 {
+            font-family: 'Cinzel', serif;
             font-size: clamp(2.5rem, 8vw, 4rem);
             font-weight: 900;
-            letter-spacing: 3px;
+            letter-spacing: 4px;
             margin-bottom: 1rem;
-            background: linear-gradient(135deg, var(--roman-gold), #FFF5D6);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: var(--roman-gold);
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
 
         .tagline {
@@ -113,30 +129,20 @@
             margin-right: auto;
         }
 
-        .download-btn {
-            display: inline-flex;
-            align-items: center;
-            gap: 12px;
-            background: var(--roman-gold);
-            color: var(--marble-black);
-            padding: 18px 36px;
-            border-radius: 14px;
-            text-decoration: none;
-            font-size: 1.1rem;
-            font-weight: 600;
+        .app-store-btn {
+            display: inline-block;
+            margin-top: 2rem;
             transition: all 0.3s ease;
-            box-shadow: 0 10px 40px rgba(212, 175, 55, 0.4);
         }
 
-        .download-btn:hover {
+        .app-store-btn:hover {
             transform: translateY(-3px);
-            box-shadow: 0 15px 50px rgba(212, 175, 55, 0.5);
-            background: #E5C245;
+            filter: brightness(1.1);
         }
 
-        .download-btn svg {
-            width: 24px;
-            height: 24px;
+        .app-store-btn img {
+            height: 60px;
+            width: auto;
         }
 
         /* Features */
@@ -151,11 +157,13 @@
         }
 
         .section-title {
+            font-family: 'Cinzel', serif;
             font-size: 2.5rem;
             text-align: center;
             margin-bottom: 3rem;
             color: var(--roman-gold);
-            letter-spacing: 2px;
+            letter-spacing: 3px;
+            font-weight: 900;
         }
 
         .features-grid {
@@ -347,18 +355,22 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <div class="logo">🏛️</div>
+            <div class="logo">
+                <img src="roman-character.png" alt="Win 10min Roman Character">
+            </div>
             <h1>WIN 10MIN</h1>
             <p class="tagline">Build Your Roman Empire</p>
             <p class="description">
                 Transform your focus into an empire. Block distracting apps, complete focused work sessions,
                 and watch your virtual Roman city grow with each victory.
             </p>
-            <a href="https://apps.apple.com/app/win-10min/id6752724300" class="download-btn">
-                <svg viewBox="0 0 24 24" fill="currentColor">
-                    <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/>
+            <a href="https://apps.apple.com/app/win-10min/id6752724300" class="app-store-btn">
+                <svg viewBox="0 0 140 48" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="140" height="48" rx="8" fill="black"/>
+                    <path d="M29.24 24.84c-.03-2.88 2.36-4.28 2.47-4.35-1.35-1.97-3.44-2.24-4.18-2.27-1.77-.18-3.47 1.05-4.37 1.05-.91 0-2.3-1.03-3.79-1-1.94.03-3.74 1.14-4.74 2.88-2.04 3.53-.52 8.74 1.45 11.6.98 1.4 2.13 2.97 3.64 2.91 1.47-.06 2.02-.94 3.79-.94 1.76 0 2.27.94 3.81.91 1.58-.03 2.57-1.41 3.52-2.82 1.12-1.62 1.57-3.2 1.59-3.28-.04-.01-3.04-1.16-3.07-4.62l-.12-1.07zm-2.88-8.37c.8-.98 1.35-2.32 1.2-3.67-1.16.05-2.58.78-3.41 1.75-.74.86-1.4 2.25-1.23 3.57 1.3.1 2.63-.66 3.44-1.65z" fill="white"/>
+                    <text x="45" y="20" font-family="-apple-system, BlinkMacSystemFont, sans-serif" font-size="9" fill="white">Download on the</text>
+                    <text x="45" y="35" font-family="-apple-system, BlinkMacSystemFont, sans-serif" font-size="16" font-weight="600" fill="white">App Store</text>
                 </svg>
-                Download on App Store
             </a>
         </div>
     </section>
@@ -483,12 +495,16 @@
     <footer>
         <div class="container">
             <div class="footer-links">
-                <a href="https://apps.apple.com/app/win-10min/id6752724300">Download</a>
-                <a href="mailto:support@lfsadigital.com">Support</a>
-                <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">Terms</a>
-                <a href="https://lfsadigital.com/privacy">Privacy</a>
+                <a href="https://apps.apple.com/app/win-10min/id6752724300">Download App</a>
+                <a href="mailto:support@lfsadigital.com">Contact Support</a>
+                <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">Terms of Use</a>
+                <a href="https://lfsadigital.com">Privacy Policy</a>
             </div>
-            <p>&copy; 2024 LFSA DIGITAL LLC. All rights reserved.</p>
+            <p style="margin-top: 2rem; opacity: 0.7; font-size: 0.9rem;">
+                Win 10min is a focus and productivity app. Requires iOS 16.0 or later.<br>
+                Screen Time permissions required for app blocking functionality.
+            </p>
+            <p style="margin-top: 1rem;">&copy; 2024 LFSA DIGITAL LLC. All rights reserved.</p>
             <p class="latin-motto">VENI · VIDI · VICI</p>
         </div>
     </footer>
