--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         .app-store-button {
             display: inline-block;
-            margin: 30px auto;
+            margin: 20px auto;
             transition: transform 0.2s ease;
         }
 
@@ -122,6 +122,61 @@
         .app-store-button img {
             height: 60px;
             width: auto;
+        }
+
+        /* Screenshots */
+        .screenshots {
+            padding: 5rem 2rem;
+            background: var(--marble-black);
+        }
+
+        .screenshots-grid {
+            display: flex;
+            gap: 20px;
+            overflow-x: auto;
+            padding: 20px 0;
+            scroll-snap-type: x mandatory;
+        }
+
+        .screenshot-item {
+            flex: 0 0 auto;
+            text-align: center;
+            scroll-snap-align: center;
+        }
+
+        .screenshot-item img {
+            width: 250px;
+            height: auto;
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            transition: transform 0.3s ease;
+        }
+
+        .screenshot-item:hover img {
+            transform: scale(1.05);
+        }
+
+        .screenshot-item p {
+            margin-top: 1rem;
+            color: var(--roman-gold);
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-size: 0.9rem;
+        }
+
+        @media (min-width: 768px) {
+            .screenshots-grid {
+                justify-content: center;
+                flex-wrap: wrap;
+                overflow-x: visible;
+            }
+        }
+
+        @media (min-width: 1200px) {
+            .screenshot-item img {
+                width: 200px;
+            }
         }
 
         /* Features */
@@ -145,39 +200,6 @@
             font-weight: 900;
         }
 
-        .distractions-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 20px;
-            margin-top: 30px;
-        }
-
-        @media (min-width: 768px) {
-            .distractions-grid {
-                grid-template-columns: repeat(3, 1fr);
-                max-width: 600px;
-                margin: 30px auto 0;
-            }
-        }
-
-        .distraction-item {
-            text-align: center;
-            padding: 1.5rem;
-            background: var(--dark-stone);
-            border-radius: 12px;
-            border: 1px solid rgba(212, 175, 55, 0.2);
-        }
-
-        .distraction-icon {
-            font-size: 2.5rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .distraction-name {
-            font-size: 0.9rem;
-            color: var(--parchment);
-            opacity: 0.8;
-        }
 
         /* How it Works */
         .how-it-works {
@@ -391,43 +413,39 @@
             </div>
             <h1 class="main-title">Win 10min</h1>
             <p class="subtitle">All you need is to win 10 minutes</p>
-            <p class="description">
-                If you can focus for 10 minutes, you can build your Empire. That's it!
-            </p>
             <a href="https://apps.apple.com/br/app/win-10min/id6751601664?l=en-GB" class="app-store-button">
                 <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Download on the App Store">
             </a>
+            <p class="description">
+                If you can focus for 10 minutes, you can build your Empire. That's it!
+            </p>
         </div>
     </section>
 
-    <!-- Conquered Distractions -->
-    <section class="features">
+    <!-- App Screenshots -->
+    <section class="screenshots">
         <div class="container">
-            <h2 class="section-title">CONQUERED DISTRACTIONS</h2>
-            <div class="distractions-grid">
-                <div class="distraction-item">
-                    <div class="distraction-icon">📱</div>
-                    <div class="distraction-name">Instagram</div>
+            <h2 class="section-title">EXPERIENCE THE APP</h2>
+            <div class="screenshots-grid">
+                <div class="screenshot-item">
+                    <img src="screenshot1.png" alt="Stay Focused - Win 10min">
+                    <p>Stay Focused</p>
                 </div>
-                <div class="distraction-item">
-                    <div class="distraction-icon">🎮</div>
-                    <div class="distraction-name">TikTok</div>
+                <div class="screenshot-item">
+                    <img src="screenshot2.png" alt="Focus Timer">
+                    <p>Focus Timer</p>
                 </div>
-                <div class="distraction-item">
-                    <div class="distraction-icon">💬</div>
-                    <div class="distraction-name">WhatsApp</div>
+                <div class="screenshot-item">
+                    <img src="screenshot3.png" alt="Building Complete">
+                    <p>Victory Screen</p>
                 </div>
-                <div class="distraction-item">
-                    <div class="distraction-icon">🐦</div>
-                    <div class="distraction-name">X (Twitter)</div>
+                <div class="screenshot-item">
+                    <img src="screenshot4.png" alt="Build Your Empire">
+                    <p>Empire Map</p>
                 </div>
-                <div class="distraction-item">
-                    <div class="distraction-icon">📺</div>
-                    <div class="distraction-name">YouTube</div>
-                </div>
-                <div class="distraction-item">
-                    <div class="distraction-icon">👻</div>
-                    <div class="distraction-name">Snapchat</div>
+                <div class="screenshot-item">
+                    <img src="screenshot5.png" alt="Track Progress">
+                    <p>Share Progress</p>
                 </div>
             </div>
         </div>
