--- a/index.html
+++ b/index.html
@@ -7,10 +7,26 @@
       <meta name="description" content="All you need is to win 10 minutes. If you can focus for 10 minutes, you can build your Empire.">
       <meta name="keywords" content="focus timer, pomodoro app, app blocker, screen time, productivity, iOS app, iPhone, concentration, study timer">
 
-      <!-- Open Graph -->
-      <meta property="og:title" content="Win 10min - Focus Timer & App Blocker">
+      <!-- Favicon -->
+      <link rel="icon" type="image/png" href="/roman-character.png">
+      <link rel="apple-touch-icon" href="/roman-character.png">
+
+      <!-- Open Graph / Facebook -->
+      <meta property="og:title" content="Win 10min - Focus Timer & App Blocker for iPhone">
       <meta property="og:description" content="All you need is to win 10 minutes. If you can focus for 10 minutes, you can build your Empire.">
       <meta property="og:type" content="website">
+      <meta property="og:url" content="https://win10minutes.app">
+      <meta property="og:image" content="https://win10minutes.app/roman-character.png">
+      <meta property="og:image:width" content="1200">
+      <meta property="og:image:height" content="630">
+      <meta property="og:image:alt" content="Win 10min Roman Character">
+
+      <!-- Twitter Card -->
+      <meta name="twitter:card" content="summary_large_image">
+      <meta name="twitter:title" content="Win 10min - Focus Timer & App Blocker for iPhone">
+      <meta name="twitter:description" content="All you need is to win 10 minutes. If you can focus for 10 minutes, you can build your Empire.">
+      <meta name="twitter:image" content="https://win10minutes.app/roman-character.png">
+      <meta name="twitter:image:alt" content="Win 10min Roman Character">
 
       <style>
           @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;900&display=swap');
