--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <meta property="og:description" content="All you need is to win 10 minutes. If you can focus for 10 minutes, you can build your Empire.">
       <meta property="og:type" content="website">
       <meta property="og:url" content="https://win10minutes.app">
-      <meta property="og:image" content="https://win10minutes.app/roman-character.png">
+      <meta property="og:image" content="https://win10minutes.app/og-image.png">
       <meta property="og:image:width" content="1200">
       <meta property="og:image:height" content="630">
       <meta property="og:image:alt" content="Win 10min Roman Character">
@@ -25,7 +25,7 @@
       <meta name="twitter:card" content="summary_large_image">
       <meta name="twitter:title" content="Win 10min - Focus Timer & App Blocker for iPhone">
       <meta name="twitter:description" content="All you need is to win 10 minutes. If you can focus for 10 minutes, you can build your Empire.">
-      <meta name="twitter:image" content="https://win10minutes.app/roman-character.png">
+      <meta name="twitter:image" content="https://win10minutes.app/og-image.png">
       <meta name="twitter:image:alt" content="Win 10min Roman Character">
 
       <style>
