--- a/index.html
+++ b/index.html
@@ -641,8 +641,8 @@
                   <p style="opacity: 0.9; font-size: 1.1rem; margin-bottom: 1rem;">
                       Need help? Have questions? We're here for you.
                   </p>
-                  <a href="mailto:support@win10minutes.app" class="support-email">
-                      ✉️ support@win10minutes.app
+                  <a href="mailto:win10minapp@gmail.com" class="support-email">
+                      ✉️ win10minapp@gmail.com
                   </a>
                   <p style="opacity: 0.7; font-size: 0.9rem;">
                       We typically respond within 24 hours.
