Update app screenshots section in index.html

--- a/index.html
+++ b/index.html
@@ -530,38 +530,44 @@
           </div>
       </section>
 
-      <!-- App Screenshots -->
-      <section class="screenshots">
-          <div class="container">
-              <h2 class="section-title">EXPERIENCE THE APP</h2>
-              <div class="screenshots-grid">
-                  <div class="screenshot-item">
-                      <img src="screenshot2.png" alt="Win 10 Minutes">
-                  </div>
-                  <div class="screenshot-item">
-                      <img src="screenshot3.png" alt="Focus Timer">
-                  </div>
-                  <div class="screenshot-item">
-                      <img src="screenshot4.png" alt="Victory Screen">
-                  </div>
-                  <div class="screenshot-item">
-                      <img src="screenshot5.png" alt="Track Your Focus">
-                  </div>
-                  <div class="screenshot-item">
-                      <img src="screenshot1.png" alt="Build Your Empire">
-                  </div>
-                  <div class="screenshot-item">
-                      <img src="screenshot6.png" alt="AI Task Breakdown">
-                  </div>
-                  <div class="screenshot-item">
-                      <img src="screenshot7.png" alt="Plan Tasks Ahead">
-                  </div>
-                  <div class="screenshot-item">
-                      <img src="screenshot8.png" alt="Review Your Tasks">
-                  </div>
+     <!-- App Screenshots -->
+  <section class="screenshots">
+      <div class="container">
+          <h2 class="section-title">EXPERIENCE THE APP</h2>
+          <div class="screenshots-grid">
+              <div class="screenshot-item">
+                  <img src="screenshot-focus.png" alt="Focus for 10 Minutes">
+              </div>
+              <div class="screenshot-item">
+                  <img src="screenshot3.png" alt="Focus Timer">
+              </div>
+              <div class="screenshot-item">
+                  <img src="screenshot4.png" alt="Victory Screen">
+              </div>
+              <div class="screenshot-item">
+                  <img src="screenshot5.png" alt="Track Your Focus">
+              </div>
+              <div class="screenshot-item">
+                  <img src="screenshot1.png" alt="Build Your Empire">
+              </div>
+              <div class="screenshot-item">
+                  <img src="screenshot6.png" alt="AI Task Breakdown">
+              </div>
+              <div class="screenshot-item">
+                  <img src="screenshot7.png" alt="Plan Tasks Ahead">
+              </div>
+              <div class="screenshot-item">
+                  <img src="screenshot8.png" alt="Review Your Tasks">
+              </div>
+              <div class="screenshot-item">
+                  <img src="screenshot-sfs.png" alt="Super Focus Sessions">
+              </div>
+              <div class="screenshot-item">
+                  <img src="screenshot-blocks.png" alt="Block Schedules">
               </div>
           </div>
-      </section>
+      </div>
+  </section>
 
       <!-- How It Works -->
       <section class="how-it-works">
