Clean up screenshot items in index.html
Removed duplicate screenshot items and adjusted layout.

--- a/index.html
+++ b/index.html
@@ -535,12 +535,12 @@
       <div class="container">
           <h2 class="section-title">EXPERIENCE THE APP</h2>
           <div class="screenshots-grid">
-              <div class="screenshot-item">
-                  <img src="screenshot-focus.png" alt="Focus for 10 Minutes">
-              </div>
-              <div class="screenshot-item">
-                  <img src="screenshot3.png" alt="Focus Timer">
-              </div>
+      <div class="screenshot-item">
+          <img src="screenshot2.png" alt="Win 10 Minutes">
+      </div>
+      <div class="screenshot-item">
+          <img src="screenshot-focus.png" alt="Focus for 10 Minutes">
+      </div>
               <div class="screenshot-item">
                   <img src="screenshot4.png" alt="Victory Screen">
               </div>
